# Computer-Vision-algorithms

./: .gitignore  README.md
1 lab/: CMakeLists.txt  HsvSliders.cpp  HsvSliders.h  MainWindow.cpp  MainWindow.h  main.cpp
2 lab/: Algo.cpp  Algo.h  CMakeLists.txt  HistogramWindow.cpp  HistogramWindow.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  colorsUtils.h  main.cpp
3 lab/: main.py
4 lab/: mean_shift.py  n_cut.py  split_merge.py
5 lab/: foerstner.py  harris.py  sift.py
6 lab/: main.py
7lab/: main.py
